test/integration/httproute/manifests/backends/1_route_cors/route-1.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route-echo-1
spec:
  parentRefs:
  - name: gateway
    sectionName: http
  hostnames:
  - "example.haproxy"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /route1
    filters:
    - type: CORS
      cors:
        allowOrigins:
        - "http://example.haproxy"
        allowMethods:
        - GET
        - POST
        allowHeaders:
        - Content-Type
        - Authorization
        exposeHeaders:
        - X-Request-Id
        maxAge: 3600
    backendRefs:
    - name: http-echo-1
      port: 80
